# opengl-playground

./: CMakeLists.txt  Camera.cpp  Camera.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
assets/: 13041_Beagle_v1_L1.mtl  ChessKing.obj.mtl  Handgun_Packed.dae  utah-teapot.mtl
dependencies/GLEW/lib/: libGLEW.2.2.0.dylib
dependencies/SOIL2/lib/: libsoil2-debug.dylib
dependencies/assimp/lib/: libIrrXML.dylib
shader/: FragmentShader.glsl  VertexShader.glsl
